[#9355] Cleanup